--- a/src/nodeInfo.html
+++ b/src/nodeInfo.html
@@ -12,6 +12,7 @@
     <link href="static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/ukhasnet.css" rel="stylesheet">
     <!-- /build -->
+    <link href="static/leaflet/leaflet.css" rel="stylesheet">
     <style>
     body {
         padding-top: 30px;
@@ -148,6 +149,7 @@
     <script src="static/dygraph-combined.js"></script>
     <script src="static/d3.min.js"></script>
     <script src="static/socket.io.min.js"></script>
+    <script src="static/leaflet/leaflet.js"></script>
     <script>
     var pageStarting=true;
     var graphObjs = [];
