--- a/src/nodeInfo.html
+++ b/src/nodeInfo.html
@@ -340,7 +340,7 @@
                     });
                     // Map Marker
                     var popupHtml = '<b>Last Updated:</b> '+datetime_str(data[0].t)+'<br>'
-                    popupHtml += Math.round(data[0].lat*10000)/10000+', '+Math.round(data[0].lon*10000)/10000+' <b>Alt:</b> '+data[0].alt+'m';
+                    popupHtml += '<b>Position:</b> '+Math.round(data[0].lat*10000)/10000+', '+Math.round(data[0].lon*10000)/10000+' <b>Alt:</b> '+data[0].alt+'m';
                     mapMarker = L.marker([data[0].lat,data[0].lon], {
                         title: "Current Location",
                         icon: mapIcons["balloon-blue"]
@@ -381,7 +381,7 @@
 	                map.panTo([data[0].lat, data[0].lon]);
 	                mapMarker.setLatLng([data[0].lat, data[0].lon]);
 	                var popupHtml = '<b>Last Updated:</b> '+datetime_str(data[0].t)+'<br>'
-                    popupHtml += Math.round(data[0].lat*10000)/10000+', '+Math.round(data[0].lon*10000)/10000+' <b>Alt:</b> '+data[0].alt+'m';
+                    popupHtml += '<b>Position:</b> '+Math.round(data[0].lat*10000)/10000+', '+Math.round(data[0].lon*10000)/10000+' <b>Alt:</b> '+data[0].alt+'m';
                     mapMarker.setPopupContent(popupHtml);
                     var temp_latlngs = [];
                     for(var i=0;i<dataLength;i++) {
