--- a/src/logtail.html
+++ b/src/logtail.html
@@ -64,7 +64,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="//www.ukhas.net/wiki/" target="_blank">Wiki</a></li>
+            <li><a href="//ukhas.net/wiki/" target="_blank">Wiki</a></li>
             <li><a href="https://webchat.freenode.net/?channels=ukhasnet" target="_blank">IRC Chat</a></li>
             <li><a href="https://github.com/UKHASnet/" target="_blank">GitHub</a></li>
             <li class="active"><a href="#">Logtail</a></li>
@@ -100,7 +100,7 @@
     var row_fifo = []
     
     function logtailConnect() {
-        Socket = io("www.ukhas.net/logtail", {'force new connection': true });
+        Socket = io("ukhas.net/logtail", {'force new connection': true });
         Socket.on("logtail_l200", function(message){
             data=JSON.parse(message);
             if(typeof(data.length)!= 'undefined' && data.length!=0) {
