--- a/src/nodeList.html
+++ b/src/nodeList.html
@@ -100,7 +100,7 @@
 	        dataType: 'json',
 	        success: function( data ) {
 	            if(typeof(data.length)!= 'undefined' && data.length!=0) {
-                        var output='<div class="input-group"><span class="input-group-addon">Filter</span><input id="filter" type="text" class="form-control" placeholder="Type here..."></div>';
+                        var output='<div class="input-group"><span class="input-group-addon">Filter</span><input id="filter" type="text" class="form-control" placeholder="Type here..." autofocus></div>';
 	                output+='<table class="table"><thead><tr><th class="col-md-3"><span>Node ID</span></th><th class="col-md-3"><span>Description</span></th></tr></thead><tbody class="searchable">';
 	                var dataLength = data.length;
                     for (var i=0; i<dataLength; i++) {
