--- a/src/nodeInfo.html
+++ b/src/nodeInfo.html
@@ -155,6 +155,7 @@
     <script>
     var pageStarting=true;
     var graphObjs = [];
+    var currentGraphData;
     var dataInterval = 48*3600; // 48 hours
     var map;
     var mapIcons = [];
