--- a/src/map.html
+++ b/src/map.html
@@ -86,7 +86,7 @@
     </div>
     <div id="map"></div>
     <!-- build:js static/jquerybootstrap.min.js -->
-    <script src="static/jquery/jquery-1.11.3.min.js"></script>
+    <script src="static/jquery/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <!-- /build -->
     <script src="static/leaflet/leaflet.js"></script>
