--- a/src/nodeInfo.html
+++ b/src/nodeInfo.html
@@ -144,7 +144,7 @@
     </div>
     </div><!-- /.container -->
     <!-- build:js static/jquerybootstrap.min.js -->
-    <script src="static/jquery/jquery-1.11.3.min.js"></script>
+    <script src="static/jquery/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <!-- /build -->
     <script src="static/moment.min.js"></script>
